fix package paths

--- a/{{cookiecutter.repo_name}}/.bumpversion.cfg
+++ b/{{cookiecutter.repo_name}}/.bumpversion.cfg
@@ -24,6 +24,6 @@ search = version = release = '{current_version}'
 replace = version = release = '{new_version}'
 {%- endif %}
 
-[bumpversion:file:src/{{ cookiecutter.package_name }}/__init__.py]
+[bumpversion:file:src/{{ cookiecutter.package_namespace }}/{{ cookiecutter.package_name }}/__init__.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
