--- a/{{cookiecutter.repo_name}}/setup.cfg
+++ b/{{cookiecutter.repo_name}}/setup.cfg
@@ -80,8 +80,8 @@ addopts =
 {%- if cookiecutter.allow_tests_inside_package == 'yes' %}
     --pyargs
 # The order of these options matters. testpaths comes after addopts so that
-# {{cookiecutter.package_name}} in testpaths is interpreted as
-# --pyargs {{cookiecutter.package_name}}.
+# {{cookiecutter.package_namespace}}.{{cookiecutter.package_name}} in testpaths is interpreted as
+# --pyargs {{cookiecutter.package_namespace}}.{{cookiecutter.package_name}}.
 # Any tests in the src/ directory (that is, tests installed with the package)
 # can be run by any user with pytest --pyargs {{cookiecutter.package_name}}.
 # Packages that are sensitive to the host machine, most famously NumPy,
