update test package paths

--- a/{{cookiecutter.repo_name}}/setup.cfg
+++ b/{{cookiecutter.repo_name}}/setup.cfg
@@ -95,7 +95,7 @@ addopts =
 # the src/ directory by removing
 # --pyargs and {{cookiecutter.package_name}} from the options here.
 testpaths =
-    {{cookiecutter.package_name}}
+    {{cookiecutter.package_namespace}}.{{cookiecutter.package_name}}
     tests/
 {%- else %}
 testpaths =
