remove requiresio usages

--- a/ci/setup.cfg
+++ b/ci/setup.cfg
@@ -17,9 +17,9 @@ c_extension_optional =
     optional: yes &c_extension_support[yes] &command_line_interface[plain] &test_matrix_configurator[no]
     : no
 full_name =
-    : Ion"'el Cristian Mărieș
+    : eVision.AI
 project_name =
-    : Namé"'less
+    : eVision Library
 command_line_interface =
     click
     : plain
