--- a/{{cookiecutter.repo_name}}/MANIFEST.in
+++ b/{{cookiecutter.repo_name}}/MANIFEST.in
@@ -15,6 +15,6 @@ include LICENSE
 include README.rst
 include pyproject.toml
 
-include tox.ini .travis.yml .appveyor.yml
+include tox.ini .travis.yml
 
 global-exclude *.py[cod] __pycache__/* *.so *.dylib
