--- a/{{cookiecutter.repo_name}}/setup.cfg
+++ b/{{cookiecutter.repo_name}}/setup.cfg
@@ -118,7 +118,7 @@ skip = migrations
 {% if cookiecutter.test_matrix_configurator == "yes" %}
 [matrix]
 # This is the configuration for the `./bootstrap.py` script.
-# It generates `.travis.yml`, `tox.ini`.
+# It generates `tox.ini`.
 #
 # Syntax: [alias:] value [!variable[glob]] [&variable[glob]]
 #
