remove codecov usages

--- a/{{cookiecutter.repo_name}}/ci/templates/tox.ini
+++ b/{{cookiecutter.repo_name}}/ci/templates/tox.ini
@@ -18,7 +18,7 @@ basepython =
 {%- if cookiecutter.sphinx_docs == "yes" %}
     {docs,spell}: {env:TOXPYTHON:python3}
 {%- endif %}
-    {bootstrap,clean,check,report{%- if cookiecutter.codecov == 'yes' %},codecov{% endif %}{% if cookiecutter.coveralls == 'yes' %},coveralls{% if cookiecutter.c_extension_support != "no" %},extension-coveralls{% endif %}{% endif %}}: {env:TOXPYTHON:python3}
+    {bootstrap,clean,check,report{% if cookiecutter.coveralls == 'yes' %},coveralls{% if cookiecutter.c_extension_support != "no" %},extension-coveralls{% endif %}{% endif %}}: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
@@ -150,15 +150,6 @@ skip_install = true
 commands =
     coveralls --build-root=. --include=src --dump=extension-coveralls.json []
 {%- endif %}
-{%- endif %}
-{% if cookiecutter.codecov == 'yes' %}
-
-[testenv:codecov]
-deps =
-    codecov
-skip_install = true
-commands =
-    codecov []
 {%- endif %}
 {% raw %}
 [testenv:report]
