--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -42,7 +42,7 @@ basepython =
     pypy3: {env:TOXPYTHON:pypy3}
     py27: {env:TOXPYTHON:python2.7}
     {% if cookiecutter.sphinx_docs == "yes" %}{py3,docs,spell}{% else %}py3{% endif %}: {env:TOXPYTHON:python3}
-    {bootstrap,clean,check,report{%- if cookiecutter.codecov == 'yes' %},codecov{% endif %}{% if cookiecutter.coveralls == 'yes' %},coveralls{% if cookiecutter.c_extension_support != "no" %},extension-coveralls{% endif %}{% endif %}}: {env:TOXPYTHON:python3}
+    {bootstrap,clean,check,report{% if cookiecutter.coveralls == 'yes' %},coveralls{% if cookiecutter.c_extension_support != "no" %},extension-coveralls{% endif %}{% endif %}}: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
@@ -160,15 +160,6 @@ skip_install = true
 commands =
     coveralls --build-root=. --include=src --dump=extension-coveralls.json []
 {%- endif %}
-{%- endif %}
-{%- if cookiecutter.codecov == 'yes' %}
-
-[testenv:codecov]
-deps =
-    codecov
-skip_install = true
-commands =
-    codecov []
 {%- endif %}
 
 [testenv:report]
