remove coverall usages

--- a/{{cookiecutter.repo_name}}/ci/templates/tox.ini
+++ b/{{cookiecutter.repo_name}}/ci/templates/tox.ini
@@ -18,7 +18,7 @@ basepython =
 {%- if cookiecutter.sphinx_docs == "yes" %}
     {docs,spell}: {env:TOXPYTHON:python3}
 {%- endif %}
-    {bootstrap,clean,check,report{% if cookiecutter.coveralls == 'yes' %},coveralls{% if cookiecutter.c_extension_support != "no" %},extension-coveralls{% endif %}{% endif %}}: {env:TOXPYTHON:python3}
+    {bootstrap,clean,check,report: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
@@ -132,24 +132,6 @@ commands =
 {%- endif %}
     sphinx-build {posargs:-E} -b html docs dist/docs
     sphinx-build -b linkcheck docs dist/docs
-{%- endif %}
-{%- if cookiecutter.coveralls == 'yes' %}
-
-[testenv:coveralls]
-deps =
-    coveralls
-skip_install = true
-commands =
-    coveralls{%- if cookiecutter.c_extension_support != "no" %} --merge=extension-coveralls.json{% endif %} []
-{% if cookiecutter.c_extension_support != "no" %}
-
-[testenv:extension-coveralls]
-deps =
-    cpp-coveralls
-skip_install = true
-commands =
-    coveralls --build-root=. --include=src --dump=extension-coveralls.json []
-{%- endif %}
 {%- endif %}
 {% raw %}
 [testenv:report]
