--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -42,7 +42,7 @@ basepython =
     pypy3: {env:TOXPYTHON:pypy3}
     py27: {env:TOXPYTHON:python2.7}
     {% if cookiecutter.sphinx_docs == "yes" %}{py3,docs,spell}{% else %}py3{% endif %}: {env:TOXPYTHON:python3}
-    {bootstrap,clean,check,report{% if cookiecutter.coveralls == 'yes' %},coveralls{% if cookiecutter.c_extension_support != "no" %},extension-coveralls{% endif %}{% endif %}}: {env:TOXPYTHON:python3}
+    {bootstrap,clean,check,report: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
@@ -142,24 +142,6 @@ commands =
 {%- endif %}
     sphinx-build {posargs:-E} -b html docs dist/docs
     sphinx-build -b linkcheck docs dist/docs
-{%- endif %}
-{%- if cookiecutter.coveralls == 'yes' %}
-
-[testenv:coveralls]
-deps =
-    coveralls
-skip_install = true
-commands =
-    coveralls{%- if cookiecutter.c_extension_support != "no" %} {env:COVERALLS_EXTRAS:--merge=extension-coveralls.json}{% endif %} []
-{%- if cookiecutter.c_extension_support != "no" %}
-
-[testenv:extension-coveralls]
-deps =
-    cpp-coveralls
-skip_install = true
-commands =
-    coveralls --build-root=. --include=src --dump=extension-coveralls.json []
-{%- endif %}
 {%- endif %}
 
 [testenv:report]
