--- a/{{cookiecutter.repo_name}}/setup.cfg
+++ b/{{cookiecutter.repo_name}}/setup.cfg
@@ -77,7 +77,6 @@ addopts =
     --doctest-modules
     --doctest-glob=\*.rst
     --tb=short
-{%- if cookiecutter.allow_tests_inside_package == 'yes' %}
     --pyargs
 # The order of these options matters. testpaths comes after addopts so that
 # {{cookiecutter.package_namespace}}.{{cookiecutter.package_name}} in testpaths is interpreted as
@@ -95,12 +94,8 @@ addopts =
 # the src/ directory by removing
 # --pyargs and {{cookiecutter.package_name}} from the options here.
 testpaths =
-    {{cookiecutter.package_namespace}}.{{cookiecutter.package_name}}
+    {{cookiecutter.package_namespace}}/{{cookiecutter.package_name}}
     tests/
-{%- else %}
-testpaths =
-    tests
-{%- endif %}
 
 {% elif cookiecutter.test_runner == "nose" -%}
 [nosetests]
