remove setup_py_uses_setuptools_scm option

--- a/ci/setup.cfg
+++ b/ci/setup.cfg
@@ -29,17 +29,14 @@ sphinx_docs =
     : no
 linter =
     : flake8
-    pylama &command_line_interface[plain] &test_runner[pytest] &test_matrix_configurator[no] &test_matrix_separate_coverage[no] &c_extension_support[no] &setup_py_uses_setuptools_scm[no]
+    pylama &command_line_interface[plain] &test_runner[pytest] &test_matrix_configurator[no] &test_matrix_separate_coverage[no] &c_extension_support[no]
 setup_py_uses_test_runner =
     : yes
-setup_py_uses_setuptools_scm =
-    scm: yes &command_line_interface[plain] &test_runner[pytest] &test_matrix_configurator[no] &test_matrix_separate_coverage[yes] &c_extension_optional[no] &c_extension_test_pypi[yes]
-    : no
 repo_hosting_domain =
     : github.com
-    private: no &command_line_interface[plain] &test_runner[pytest] &test_matrix_configurator[no] &test_matrix_separate_coverage[no] &c_extension_support[no] &setup_py_uses_setuptools_scm[no] &linter[flake8]
+    private: no &command_line_interface[plain] &test_runner[pytest] &test_matrix_configurator[no] &test_matrix_separate_coverage[no] &c_extension_support[no] &linter[flake8]
 c_extension_test_pypi =
     : no
-    publish: yes &command_line_interface[plain] &test_runner[pytest] &test_matrix_configurator[no] &test_matrix_separate_coverage[yes] !c_extension_support[no] &c_extension_optional[no] &setup_py_uses_setuptools_scm[yes]
+    publish: yes &command_line_interface[plain] &test_runner[pytest] &test_matrix_configurator[no] &test_matrix_separate_coverage[yes] !c_extension_support[no] &c_extension_optional[no]
 c_extension_test_pypi_username =
     : ionel
