--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    {py27,py3}-{cext,cext-optional,cffi,cython,matrix-cext,matrix-separate-cext,nose-pure,nose-pure-argparse,nose-pure-click,nose-pure-nocli,pure,pure-argparse,pure-click,pure-nocli,pure-private,pure-pylama,separate-cext,separate-cext-optional,separate-cext-scm-publish,separate-cffi,separate-cffi-scm-publish,separate-cython,separate-cython-scm-publish,separate-nose-pure,separate-pure}
+    {py27,py3}-{cext,cext-optional,cffi,cython,matrix-cext,matrix-separate-cext,nose-pure,nose-pure-argparse,nose-pure-click,nose-pure-nocli,pure,pure-argparse,pure-click,pure-nocli,pure-private,pure-pylama,separate-cext,separate-cext-optional,separate-cext-publish,separate-cffi,separate-cffi-publish,separate-cython,separate-cython-publish,separate-nose-pure,separate-pure}
 skipsdist = true
 
 [testenv]
@@ -71,21 +71,21 @@ commands =
 [testenv:py27-separate-cext-optional]
 commands =
     {toxinidir}/ci/test.cmd separate-cext-optional
-[testenv:py27-separate-cext-scm-publish]
+[testenv:py27-separate-cext-publish]
 commands =
-    {toxinidir}/ci/test.cmd separate-cext-scm-publish
+    {toxinidir}/ci/test.cmd separate-cext-publish
 [testenv:py27-separate-cffi]
 commands =
     {toxinidir}/ci/test.cmd separate-cffi
-[testenv:py27-separate-cffi-scm-publish]
+[testenv:py27-separate-cffi-publish]
 commands =
-    {toxinidir}/ci/test.cmd separate-cffi-scm-publish
+    {toxinidir}/ci/test.cmd separate-cffi-publish
 [testenv:py27-separate-cython]
 commands =
     {toxinidir}/ci/test.cmd separate-cython
-[testenv:py27-separate-cython-scm-publish]
+[testenv:py27-separate-cython-publish]
 commands =
-    {toxinidir}/ci/test.cmd separate-cython-scm-publish
+    {toxinidir}/ci/test.cmd separate-cython-publish
 [testenv:py27-separate-nose-pure]
 commands =
     {toxinidir}/ci/test.cmd separate-nose-pure
@@ -146,21 +146,21 @@ commands =
 [testenv:py3-separate-cext-optional]
 commands =
     {toxinidir}/ci/test.cmd separate-cext-optional
-[testenv:py3-separate-cext-scm-publish]
+[testenv:py3-separate-cext-publish]
 commands =
-    {toxinidir}/ci/test.cmd separate-cext-scm-publish
+    {toxinidir}/ci/test.cmd separate-cext-publish
 [testenv:py3-separate-cffi]
 commands =
     {toxinidir}/ci/test.cmd separate-cffi
-[testenv:py3-separate-cffi-scm-publish]
+[testenv:py3-separate-cffi-publish]
 commands =
-    {toxinidir}/ci/test.cmd separate-cffi-scm-publish
+    {toxinidir}/ci/test.cmd separate-cffi-publish
 [testenv:py3-separate-cython]
 commands =
     {toxinidir}/ci/test.cmd separate-cython
-[testenv:py3-separate-cython-scm-publish]
+[testenv:py3-separate-cython-publish]
 commands =
-    {toxinidir}/ci/test.cmd separate-cython-scm-publish
+    {toxinidir}/ci/test.cmd separate-cython-publish
 [testenv:py3-separate-nose-pure]
 commands =
     {toxinidir}/ci/test.cmd separate-nose-pure
