--- a/{{cookiecutter.repo_name}}/pyproject.toml
+++ b/{{cookiecutter.repo_name}}/pyproject.toml
@@ -2,7 +2,7 @@
 requires = [
     "setuptools>=30.3.0",
     "wheel",
-{%- if cookiecutter.test_runner == 'pytest' and cookiecutter.setup_py_uses_test_runner == 'yes' %}
+{%- if cookiecutter.test_runner == 'pytest' %}
     "pytest-runner",
 {%- endif %}
 {%- if cookiecutter.c_extension_support == 'cython' %}
