using pytest as default tests runner

--- a/ci/setup.cfg
+++ b/ci/setup.cfg
@@ -1,17 +1,14 @@
 [matrix]
 test_matrix_configurator =
-    matrix: yes &command_line_interface[plain] &test_runner[pytest]
+    matrix: yes &command_line_interface[plain]
     : no
 test_matrix_separate_coverage =
     separate: yes &command_line_interface[plain]
     : no
-test_runner =
-    : pytest
-    nose: nose
 c_extension_support =
-    cext: yes &command_line_interface[plain] &test_runner[pytest]
-    cython: cython &command_line_interface[plain] &test_runner[pytest] &test_matrix_configurator[no]
-    cffi: cffi &command_line_interface[plain] &test_runner[pytest] &test_matrix_configurator[no]
+    cext: yes &command_line_interface[plain]
+    cython: cython &command_line_interface[plain] &test_matrix_configurator[no]
+    cffi: cffi &command_line_interface[plain] &test_matrix_configurator[no]
     pure: no &test_matrix_configurator[no]
 c_extension_optional =
     optional: yes &c_extension_support[yes] &command_line_interface[plain] &test_matrix_configurator[no]
@@ -29,12 +26,12 @@ sphinx_docs =
     : no
 linter =
     : flake8
-    pylama &command_line_interface[plain] &test_runner[pytest] &test_matrix_configurator[no] &test_matrix_separate_coverage[no] &c_extension_support[no]
+    pylama &command_line_interface[plain] &test_matrix_configurator[no] &test_matrix_separate_coverage[no] &c_extension_support[no]
 repo_hosting_domain =
     : github.com
-    private: no &command_line_interface[plain] &test_runner[pytest] &test_matrix_configurator[no] &test_matrix_separate_coverage[no] &c_extension_support[no] &linter[flake8]
+    private: no &command_line_interface[plain] &test_matrix_configurator[no] &test_matrix_separate_coverage[no] &c_extension_support[no] &linter[flake8]
 c_extension_test_pypi =
     : no
-    publish: yes &command_line_interface[plain] &test_runner[pytest] &test_matrix_configurator[no] &test_matrix_separate_coverage[yes] !c_extension_support[no] &c_extension_optional[no]
+    publish: yes &command_line_interface[plain] &test_matrix_configurator[no] &test_matrix_separate_coverage[yes] !c_extension_support[no] &c_extension_optional[no]
 c_extension_test_pypi_username =
     : ionel
