--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -24,7 +24,7 @@ envlist = bootstrap
 
 [tox]
 envlist =
-    {% if cookiecutter.test_runner == "pytest" %}clean,{% endif %}
+    clean,
     check,
 {%- if cookiecutter.sphinx_docs == "yes" %}
     docs,
@@ -56,34 +56,20 @@ usedevelop =
 usedevelop = false
 {%- endif %}
 deps =
-{%- if cookiecutter.test_runner == "pytest" %}
     pytest
     {% if cookiecutter.test_matrix_separate_coverage == 'yes' %}cover: {% endif %}pytest-cov
-{%- else %}
-    nose
-    {% if cookiecutter.test_matrix_separate_coverage == 'yes' %}cover: {% endif %}coverage
-{%- endif %}
 commands =
 {%- if cookiecutter.c_extension_support != "no" %}
     {%- if cookiecutter.test_matrix_separate_coverage == 'yes' %}
     cover: python setup.py clean --all build_ext --force --inplace
     {%- endif %}
 {%- endif %}
-{%- if cookiecutter.test_runner == "pytest" %}
     {%- if cookiecutter.test_matrix_separate_coverage == 'yes' %}
     nocov: {posargs:pytest -vv --ignore=src}
     cover: {posargs:pytest --cov --cov-report=term-missing -vv}
     {%- else %}
     {posargs:pytest --cov --cov-report=term-missing -vv}
     {%- endif %}
-{%- else %}
-    {%- if cookiecutter.test_matrix_separate_coverage == 'yes' %}
-    nocov: {posargs:nosetests -v tests}
-    cover: {posargs:nosetests --with-coverage --cover-package={{ cookiecutter.package_name }}}
-    {%- else %}
-    {posargs:nosetests --with-coverage --cover-package={{ cookiecutter.package_name}} tests}
-    {%- endif %}
-{%- endif %}
 
 [testenv:check]
 deps =
