--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    {py27,py3}-{cext,cext-optional,cffi,cython,matrix-cext,matrix-separate-cext,nose-pure,nose-pure-argparse,nose-pure-click,nose-pure-nocli,pure,pure-argparse,pure-click,pure-nocli,pure-private,pure-pylama,separate-cext,separate-cext-optional,separate-cext-publish,separate-cffi,separate-cffi-publish,separate-cython,separate-cython-publish,separate-nose-pure,separate-pure}
+    {py27,py3}-{cext,cext-optional,cffi,cython,matrix-cext,matrix-separate-cext,pure,pure-argparse,pure-click,pure-nocli,pure-private,pure-pylama,separate-cext,separate-cext-optional,separate-cext-publish,separate-cffi,separate-cffi-publish,separate-cython,separate-cython-publish,separate-pure}
 skipsdist = true
 
 [testenv]
@@ -35,18 +35,6 @@ commands =
 [testenv:py27-matrix-separate-cext]
 commands =
     {toxinidir}/ci/test.cmd matrix-separate-cext
-[testenv:py27-nose-pure]
-commands =
-    {toxinidir}/ci/test.cmd nose-pure
-[testenv:py27-nose-pure-argparse]
-commands =
-    {toxinidir}/ci/test.cmd nose-pure-argparse
-[testenv:py27-nose-pure-click]
-commands =
-    {toxinidir}/ci/test.cmd nose-pure-click
-[testenv:py27-nose-pure-nocli]
-commands =
-    {toxinidir}/ci/test.cmd nose-pure-nocli
 [testenv:py27-pure]
 commands =
     {toxinidir}/ci/test.cmd pure
@@ -86,9 +74,6 @@ commands =
 [testenv:py27-separate-cython-publish]
 commands =
     {toxinidir}/ci/test.cmd separate-cython-publish
-[testenv:py27-separate-nose-pure]
-commands =
-    {toxinidir}/ci/test.cmd separate-nose-pure
 [testenv:py27-separate-pure]
 commands =
     {toxinidir}/ci/test.cmd separate-pure
@@ -110,18 +95,6 @@ commands =
 [testenv:py3-matrix-separate-cext]
 commands =
     {toxinidir}/ci/test.cmd matrix-separate-cext
-[testenv:py3-nose-pure]
-commands =
-    {toxinidir}/ci/test.cmd nose-pure
-[testenv:py3-nose-pure-argparse]
-commands =
-    {toxinidir}/ci/test.cmd nose-pure-argparse
-[testenv:py3-nose-pure-click]
-commands =
-    {toxinidir}/ci/test.cmd nose-pure-click
-[testenv:py3-nose-pure-nocli]
-commands =
-    {toxinidir}/ci/test.cmd nose-pure-nocli
 [testenv:py3-pure]
 commands =
     {toxinidir}/ci/test.cmd pure
@@ -161,9 +134,6 @@ commands =
 [testenv:py3-separate-cython-publish]
 commands =
     {toxinidir}/ci/test.cmd separate-cython-publish
-[testenv:py3-separate-nose-pure]
-commands =
-    {toxinidir}/ci/test.cmd separate-nose-pure
 [testenv:py3-separate-pure]
 commands =
     {toxinidir}/ci/test.cmd separate-pure
