--- a/{{cookiecutter.repo_name}}/setup.cfg
+++ b/{{cookiecutter.repo_name}}/setup.cfg
@@ -35,12 +35,11 @@ max_line_length = 120
 # PyCharm, to ensure the environment the IDE is using has the requirements.
 #
 # Unless you're in one of those situations, you can simply ignore this.
-tests_require = {{ cookiecutter.test_runner }}
+tests_require = pytest
 
 [aliases]
-# Alias `setup.py test` to `setup.py {{ cookiecutter.test_runner }}`
-test = {{ cookiecutter.test_runner }}
-{%- if cookiecutter.test_runner == "pytest" %}
+# Alias `setup.py test` to `setup.py pytest`
+test = pytest
 
 [tool:pytest]
 # If a pytest section is found in one of the possible config files
@@ -95,11 +94,6 @@ testpaths =
     {{cookiecutter.package_namespace}}/{{cookiecutter.package_name}}
     tests/
 
-{% elif cookiecutter.test_runner == "nose" -%}
-[nosetests]
-verbosity = 2
-
-{% endif -%}
 [tool:isort]
 force_single_line = True
 line_length = 120
