use flake8 as default linter

--- a/ci/setup.cfg
+++ b/ci/setup.cfg
@@ -24,12 +24,9 @@ command_line_interface =
     nocli
 sphinx_docs =
     : no
-linter =
-    : flake8
-    pylama &command_line_interface[plain] &test_matrix_configurator[no] &test_matrix_separate_coverage[no] &c_extension_support[no]
 repo_hosting_domain =
     : github.com
-    private: no &command_line_interface[plain] &test_matrix_configurator[no] &test_matrix_separate_coverage[no] &c_extension_support[no] &linter[flake8]
+    private: no &command_line_interface[plain] &test_matrix_configurator[no] &test_matrix_separate_coverage[no] &c_extension_support[no]
 c_extension_test_pypi =
     : no
     publish: yes &command_line_interface[plain] &test_matrix_configurator[no] &test_matrix_separate_coverage[yes] !c_extension_support[no] &c_extension_optional[no]
