--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    {py27,py3}-{cext,cext-optional,cffi,cython,matrix-cext,matrix-separate-cext,pure,pure-argparse,pure-click,pure-nocli,pure-private,pure-pylama,separate-cext,separate-cext-optional,separate-cext-publish,separate-cffi,separate-cffi-publish,separate-cython,separate-cython-publish,separate-pure}
+    {py27,py3}-{cext,cext-optional,cffi,cython,matrix-cext,matrix-separate-cext,pure,pure-argparse,pure-click,pure-nocli,pure-private,separate-cext,separate-cext-optional,separate-cext-publish,separate-cffi,separate-cffi-publish,separate-cython,separate-cython-publish,separate-pure}
 skipsdist = true
 
 [testenv]
@@ -50,9 +50,6 @@ commands =
 [testenv:py27-pure-private]
 commands =
     {toxinidir}/ci/test.cmd pure-private
-[testenv:py27-pure-pylama]
-commands =
-    {toxinidir}/ci/test.cmd pure-pylama
 [testenv:py27-separate-cext]
 commands =
     {toxinidir}/ci/test.cmd separate-cext
@@ -110,9 +107,6 @@ commands =
 [testenv:py3-pure-private]
 commands =
     {toxinidir}/ci/test.cmd pure-private
-[testenv:py3-pure-pylama]
-commands =
-    {toxinidir}/ci/test.cmd pure-pylama
 [testenv:py3-separate-cext]
 commands =
     {toxinidir}/ci/test.cmd separate-cext
