remove command line tools

--- a/ci/setup.cfg
+++ b/ci/setup.cfg
@@ -1,34 +1,29 @@
 [matrix]
 test_matrix_configurator =
-    matrix: yes &command_line_interface[plain]
+    matrix: yes
     : no
 test_matrix_separate_coverage =
-    separate: yes &command_line_interface[plain]
+    separate: yes
     : no
 c_extension_support =
-    cext: yes &command_line_interface[plain]
-    cython: cython &command_line_interface[plain] &test_matrix_configurator[no]
-    cffi: cffi &command_line_interface[plain] &test_matrix_configurator[no]
+    cext: yes
+    cython: cython &test_matrix_configurator[no]
+    cffi: cffi &test_matrix_configurator[no]
     pure: no &test_matrix_configurator[no]
 c_extension_optional =
-    optional: yes &c_extension_support[yes] &command_line_interface[plain] &test_matrix_configurator[no]
+    optional: yes &c_extension_support[yes] &test_matrix_configurator[no]
     : no
 full_name =
     : eVision.AI
 project_name =
     : eVision Library
-command_line_interface =
-    click
-    : plain
-    argparse
-    nocli
 sphinx_docs =
     : no
 repo_hosting_domain =
     : github.com
-    private: no &command_line_interface[plain] &test_matrix_configurator[no] &test_matrix_separate_coverage[no] &c_extension_support[no]
+    private: no &test_matrix_configurator[no] &test_matrix_separate_coverage[no] &c_extension_support[no]
 c_extension_test_pypi =
     : no
-    publish: yes &command_line_interface[plain] &test_matrix_configurator[no] &test_matrix_separate_coverage[yes] !c_extension_support[no] &c_extension_optional[no]
+    publish: yes &test_matrix_configurator[no] &test_matrix_separate_coverage[yes] !c_extension_support[no] &c_extension_optional[no]
 c_extension_test_pypi_username =
     : ionel
