--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    {py27,py3}-{cext,cext-optional,cffi,cython,matrix-cext,matrix-separate-cext,pure,pure-argparse,pure-click,pure-nocli,pure-private,separate-cext,separate-cext-optional,separate-cext-publish,separate-cffi,separate-cffi-publish,separate-cython,separate-cython-publish,separate-pure}
+    {py27,py3}-{cext,cext-optional,cffi,cython,matrix-cext,matrix-separate-cext,pure,pure-private,separate-cext,separate-cext-optional,separate-cext-publish,separate-cffi,separate-cffi-publish,separate-cython,separate-cython-publish,separate-pure}
 skipsdist = true
 
 [testenv]
@@ -38,15 +38,6 @@ commands =
 [testenv:py27-pure]
 commands =
     {toxinidir}/ci/test.cmd pure
-[testenv:py27-pure-argparse]
-commands =
-    {toxinidir}/ci/test.cmd pure-argparse
-[testenv:py27-pure-click]
-commands =
-    {toxinidir}/ci/test.cmd pure-click
-[testenv:py27-pure-nocli]
-commands =
-    {toxinidir}/ci/test.cmd pure-nocli
 [testenv:py27-pure-private]
 commands =
     {toxinidir}/ci/test.cmd pure-private
@@ -95,15 +86,6 @@ commands =
 [testenv:py3-pure]
 commands =
     {toxinidir}/ci/test.cmd pure
-[testenv:py3-pure-argparse]
-commands =
-    {toxinidir}/ci/test.cmd pure-argparse
-[testenv:py3-pure-click]
-commands =
-    {toxinidir}/ci/test.cmd pure-click
-[testenv:py3-pure-nocli]
-commands =
-    {toxinidir}/ci/test.cmd pure-nocli
 [testenv:py3-pure-private]
 commands =
     {toxinidir}/ci/test.cmd pure-private
