remove test_matrix usages

--- a/ci/setup.cfg
+++ b/ci/setup.cfg
@@ -1,17 +1,11 @@
 [matrix]
-test_matrix_configurator =
-    matrix: yes
-    : no
-test_matrix_separate_coverage =
-    separate: yes
-    : no
 c_extension_support =
     cext: yes
-    cython: cython &test_matrix_configurator[no]
-    cffi: cffi &test_matrix_configurator[no]
-    pure: no &test_matrix_configurator[no]
+    cython: cython
+    cffi: cffi
+    pure: no
 c_extension_optional =
-    optional: yes &c_extension_support[yes] &test_matrix_configurator[no]
+    optional: yes &c_extension_support[yes]
     : no
 full_name =
     : eVision.AI
@@ -21,9 +15,9 @@ sphinx_docs =
     : no
 repo_hosting_domain =
     : github.com
-    private: no &test_matrix_configurator[no] &test_matrix_separate_coverage[no] &c_extension_support[no]
+    private: no &c_extension_support[no]
 c_extension_test_pypi =
     : no
-    publish: yes &test_matrix_configurator[no] &test_matrix_separate_coverage[yes] !c_extension_support[no] &c_extension_optional[no]
+    publish: yes !c_extension_support[no] &c_extension_optional[no]
 c_extension_test_pypi_username =
     : ionel
