--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    {py27,py3}-{cext,cext-optional,cffi,cython,matrix-cext,matrix-separate-cext,pure,pure-private,separate-cext,separate-cext-optional,separate-cext-publish,separate-cffi,separate-cffi-publish,separate-cython,separate-cython-publish,separate-pure}
+    {py27,py3}-{cext,cext-optional,cext-publish,cffi,cffi-publish,cython,cython-publish,pure,pure-private}
 skipsdist = true
 
 [testenv]
@@ -23,93 +23,51 @@ commands =
 [testenv:py27-cext-optional]
 commands =
     {toxinidir}/ci/test.cmd cext-optional
+[testenv:py27-cext-publish]
+commands =
+    {toxinidir}/ci/test.cmd cext-publish
 [testenv:py27-cffi]
 commands =
     {toxinidir}/ci/test.cmd cffi
+[testenv:py27-cffi-publish]
+commands =
+    {toxinidir}/ci/test.cmd cffi-publish
 [testenv:py27-cython]
 commands =
     {toxinidir}/ci/test.cmd cython
-[testenv:py27-matrix-cext]
+[testenv:py27-cython-publish]
 commands =
-    {toxinidir}/ci/test.cmd matrix-cext
-[testenv:py27-matrix-separate-cext]
-commands =
-    {toxinidir}/ci/test.cmd matrix-separate-cext
+    {toxinidir}/ci/test.cmd cython-publish
 [testenv:py27-pure]
 commands =
     {toxinidir}/ci/test.cmd pure
 [testenv:py27-pure-private]
 commands =
     {toxinidir}/ci/test.cmd pure-private
-[testenv:py27-separate-cext]
-commands =
-    {toxinidir}/ci/test.cmd separate-cext
-[testenv:py27-separate-cext-optional]
-commands =
-    {toxinidir}/ci/test.cmd separate-cext-optional
-[testenv:py27-separate-cext-publish]
-commands =
-    {toxinidir}/ci/test.cmd separate-cext-publish
-[testenv:py27-separate-cffi]
-commands =
-    {toxinidir}/ci/test.cmd separate-cffi
-[testenv:py27-separate-cffi-publish]
-commands =
-    {toxinidir}/ci/test.cmd separate-cffi-publish
-[testenv:py27-separate-cython]
-commands =
-    {toxinidir}/ci/test.cmd separate-cython
-[testenv:py27-separate-cython-publish]
-commands =
-    {toxinidir}/ci/test.cmd separate-cython-publish
-[testenv:py27-separate-pure]
-commands =
-    {toxinidir}/ci/test.cmd separate-pure
 [testenv:py3-cext]
 commands =
     {toxinidir}/ci/test.cmd cext
 [testenv:py3-cext-optional]
 commands =
     {toxinidir}/ci/test.cmd cext-optional
+[testenv:py3-cext-publish]
+commands =
+    {toxinidir}/ci/test.cmd cext-publish
 [testenv:py3-cffi]
 commands =
     {toxinidir}/ci/test.cmd cffi
+[testenv:py3-cffi-publish]
+commands =
+    {toxinidir}/ci/test.cmd cffi-publish
 [testenv:py3-cython]
 commands =
     {toxinidir}/ci/test.cmd cython
-[testenv:py3-matrix-cext]
+[testenv:py3-cython-publish]
 commands =
-    {toxinidir}/ci/test.cmd matrix-cext
-[testenv:py3-matrix-separate-cext]
-commands =
-    {toxinidir}/ci/test.cmd matrix-separate-cext
+    {toxinidir}/ci/test.cmd cython-publish
 [testenv:py3-pure]
 commands =
     {toxinidir}/ci/test.cmd pure
 [testenv:py3-pure-private]
 commands =
     {toxinidir}/ci/test.cmd pure-private
-[testenv:py3-separate-cext]
-commands =
-    {toxinidir}/ci/test.cmd separate-cext
-[testenv:py3-separate-cext-optional]
-commands =
-    {toxinidir}/ci/test.cmd separate-cext-optional
-[testenv:py3-separate-cext-publish]
-commands =
-    {toxinidir}/ci/test.cmd separate-cext-publish
-[testenv:py3-separate-cffi]
-commands =
-    {toxinidir}/ci/test.cmd separate-cffi
-[testenv:py3-separate-cffi-publish]
-commands =
-    {toxinidir}/ci/test.cmd separate-cffi-publish
-[testenv:py3-separate-cython]
-commands =
-    {toxinidir}/ci/test.cmd separate-cython
-[testenv:py3-separate-cython-publish]
-commands =
-    {toxinidir}/ci/test.cmd separate-cython-publish
-[testenv:py3-separate-pure]
-commands =
-    {toxinidir}/ci/test.cmd separate-pure
