--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -8,18 +8,6 @@ commands =
     python ci/bootstrap.py --no-env
 passenv =
     *
-{% if cookiecutter.test_matrix_configurator == "yes" %}
-basepython =
-    python
-{% endif %}
-
-{%- if cookiecutter.test_matrix_configurator == "yes" -%}
-; this is just a bootstrap tox configuration, run tox or ./ci/bootstrap.py to have the full tox.ini
-
-[tox]
-envlist = bootstrap
-
-{%- else -%}
 ; a generative tox configuration, see: https://tox.readthedocs.io/en/latest/config.html#generative-envlist
 
 [tox]
@@ -29,7 +17,7 @@ envlist =
 {%- if cookiecutter.sphinx_docs == "yes" %}
     docs,
 {%- endif %}
-    {py27,py3,pypy,pypy3}{% if cookiecutter.test_matrix_separate_coverage == 'yes' %}-{cover,nocov}{% endif %},
+    {py27,py3,pypy,pypy3},
     report
 ignore_basepython_conflict = true
 
@@ -48,28 +36,12 @@ setenv =
     PYTHONUNBUFFERED=yes
 passenv =
     *
-{%- if cookiecutter.test_matrix_separate_coverage == 'yes' %}
-usedevelop =
-    cover: true
-    nocov: false
-{%- else %}
 usedevelop = false
-{%- endif %}
 deps =
     pytest
-    {% if cookiecutter.test_matrix_separate_coverage == 'yes' %}cover: {% endif %}pytest-cov
+    pytest-cov
 commands =
-{%- if cookiecutter.c_extension_support != "no" %}
-    {%- if cookiecutter.test_matrix_separate_coverage == 'yes' %}
-    cover: python setup.py clean --all build_ext --force --inplace
-    {%- endif %}
-{%- endif %}
-    {%- if cookiecutter.test_matrix_separate_coverage == 'yes' %}
-    nocov: {posargs:pytest -vv --ignore=src}
-    cover: {posargs:pytest --cov --cov-report=term-missing -vv}
-    {%- else %}
     {posargs:pytest --cov --cov-report=term-missing -vv}
-    {%- endif %}
 
 [testenv:check]
 deps =
@@ -107,7 +79,6 @@ commands =
 {%- endif %}
     sphinx-build {posargs:-E} -b html docs dist/docs
     sphinx-build -b linkcheck docs dist/docs
-{%- endif %}
 
 [testenv:report]
 deps = coverage
