default building docs and running docs tests
default building docs and running docs tests

--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -14,9 +14,7 @@ passenv =
 envlist =
     clean,
     check,
-{%- if cookiecutter.sphinx_docs == "yes" %}
     docs,
-{%- endif %}
     {py27,py3,pypy,pypy3},
     report
 ignore_basepython_conflict = true
@@ -29,7 +27,7 @@ basepython =
     pypy: {env:TOXPYTHON:pypy}
     pypy3: {env:TOXPYTHON:pypy3}
     py27: {env:TOXPYTHON:python2.7}
-    {% if cookiecutter.sphinx_docs == "yes" %}{py3,docs,spell}{% else %}py3{% endif %}: {env:TOXPYTHON:python3}
+    {py3,docs,spell}: {env:TOXPYTHON:python3}
     {bootstrap,clean,check,report: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
@@ -56,8 +54,6 @@ commands =
     flake8 src tests setup.py
     isort --verbose --check-only --diff --recursive src tests setup.py
 
-{%- if cookiecutter.sphinx_docs == "yes" %}
-
 [testenv:spell]
 setenv =
     SPELLCHECK=1
@@ -74,9 +70,7 @@ usedevelop = true
 deps =
     -r{toxinidir}/docs/requirements.txt
 commands =
-{%- if cookiecutter.sphinx_doctest == "yes" %}
     sphinx-build {posargs:-E} -b doctest docs dist/docs
-{%- endif %}
     sphinx-build {posargs:-E} -b html docs dist/docs
     sphinx-build -b linkcheck docs dist/docs
 
@@ -91,7 +85,6 @@ commands =
 commands = coverage erase
 skip_install = true
 deps = coverage
-{%- endif %}
 {%- if cookiecutter.c_extension_support == 'cython' %}
 
 [testenv:cythonize]
