update ci configurations

--- a/ci/setup.cfg
+++ b/ci/setup.cfg
@@ -1,21 +1,8 @@
 [matrix]
-c_extension_support =
-    cext: yes
-    cython: cython
-    cffi: cffi
-    pure: no
-c_extension_optional =
-    optional: yes &c_extension_support[yes]
-    : no
 full_name =
     : eVision.AI
 project_name =
     : eVision Library
 repo_hosting_domain =
     : github.com
-    private: no &c_extension_support[no]
-c_extension_test_pypi =
-    : no
-    publish: yes !c_extension_support[no] &c_extension_optional[no]
-c_extension_test_pypi_username =
-    : ionel
+    private: no
