--- a/ci/templates/tox.ini
+++ b/ci/templates/tox.ini
@@ -1,26 +1,22 @@
 [tox]
 envlist =
-    {py27,py3}-{{ '{' }}{{ tox_environments|sort|join(',') }}{{ '}' }}
+    py3-{{ '{' }}{{ tox_environments|sort|join(',') }}{{ '}' }}
 skipsdist = true
 
 [testenv]
 passenv =
     *
 basepython =
-    py27: python2.7
     py3: python3
 envdir =
-    py27: {toxworkdir}/py27
     py3: {toxworkdir}/py3
 deps =
     cookiecutter==1.6.0
     bumpversion==0.5.3
     tox==3.5.2
 
-{% for py in ['py27', 'py3'] %}
 {% for env, config in tox_environments|dictsort %}
-[testenv:{{ py }}-{{env}}]
+[testenv:py3-{{env}}]
 commands =
     {toxinidir}/ci/test.cmd {{ env }}
-{% endfor %}
 {% endfor %}
