remove c extensions support

--- a/tox.ini
+++ b/tox.ini
@@ -1,73 +1,23 @@
 [tox]
 envlist =
-    {py27,py3}-{cext,cext-optional,cext-publish,cffi,cffi-publish,cython,cython-publish,pure,pure-private}
+    py3-{,private}
 skipsdist = true
 
 [testenv]
 passenv =
     *
 basepython =
-    py27: python2.7
     py3: python3
 envdir =
-    py27: {toxworkdir}/py27
     py3: {toxworkdir}/py3
 deps =
     cookiecutter==1.6.0
     bumpversion==0.5.3
     tox==3.5.2
 
-[testenv:py27-cext]
+[testenv:py3-]
 commands =
-    {toxinidir}/ci/test.cmd cext
-[testenv:py27-cext-optional]
+    {toxinidir}/ci/test.cmd 
+[testenv:py3-private]
 commands =
-    {toxinidir}/ci/test.cmd cext-optional
-[testenv:py27-cext-publish]
-commands =
-    {toxinidir}/ci/test.cmd cext-publish
-[testenv:py27-cffi]
-commands =
-    {toxinidir}/ci/test.cmd cffi
-[testenv:py27-cffi-publish]
-commands =
-    {toxinidir}/ci/test.cmd cffi-publish
-[testenv:py27-cython]
-commands =
-    {toxinidir}/ci/test.cmd cython
-[testenv:py27-cython-publish]
-commands =
-    {toxinidir}/ci/test.cmd cython-publish
-[testenv:py27-pure]
-commands =
-    {toxinidir}/ci/test.cmd pure
-[testenv:py27-pure-private]
-commands =
-    {toxinidir}/ci/test.cmd pure-private
-[testenv:py3-cext]
-commands =
-    {toxinidir}/ci/test.cmd cext
-[testenv:py3-cext-optional]
-commands =
-    {toxinidir}/ci/test.cmd cext-optional
-[testenv:py3-cext-publish]
-commands =
-    {toxinidir}/ci/test.cmd cext-publish
-[testenv:py3-cffi]
-commands =
-    {toxinidir}/ci/test.cmd cffi
-[testenv:py3-cffi-publish]
-commands =
-    {toxinidir}/ci/test.cmd cffi-publish
-[testenv:py3-cython]
-commands =
-    {toxinidir}/ci/test.cmd cython
-[testenv:py3-cython-publish]
-commands =
-    {toxinidir}/ci/test.cmd cython-publish
-[testenv:py3-pure]
-commands =
-    {toxinidir}/ci/test.cmd pure
-[testenv:py3-pure-private]
-commands =
-    {toxinidir}/ci/test.cmd pure-private
+    {toxinidir}/ci/test.cmd private
