--- a/{{cookiecutter.repo_name}}/tox.ini
+++ b/{{cookiecutter.repo_name}}/tox.ini
@@ -15,17 +15,14 @@ envlist =
     clean,
     check,
     docs,
-    {py27,py3,pypy,pypy3},
+    py3,
     report
 ignore_basepython_conflict = true
 
 [testenv]
 basepython =
-    pypy: {env:TOXPYTHON:pypy}
-    pypy3: {env:TOXPYTHON:pypy3}
-    py27: {env:TOXPYTHON:python2.7}
     {py3,docs,spell}: {env:TOXPYTHON:python3}
-    {bootstrap,clean,check,report: {env:TOXPYTHON:python3}
+    {bootstrap,clean,check,report}: {env:TOXPYTHON:python3}
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
