--- a/{{cookiecutter.repo_name}}/setup.cfg
+++ b/{{cookiecutter.repo_name}}/setup.cfg
@@ -64,7 +64,7 @@ addopts =
 # the src/ directory by removing
 # --pyargs and {{cookiecutter.package_name}} from the options here.
 testpaths =
-    {{cookiecutter.package_namespace}}/{{cookiecutter.package_name}}
+    src/{{cookiecutter.package_namespace}}/{{cookiecutter.package_name}}
     tests/
 
 [tool:isort]
